<resources>
    <string name="app_name">Harman_C0765590_FP</string>

    <string name="registration_form">Registration Form</string>
    <string name="emp_first_name">Employee First Name</string>
    <string name="emp_last_name">Employee Last Name</string>
    <string name="emp_birth_year">Employee Birth Year</string>
    <string name="monthly_salary">Monthly Salary</string>
    <string name="occupation_rate">Occupation Rate</string>
    <string name="emp_id">Employee ID</string>
    <string name="emp_type">Employee Type</string>
    <string name="vehicle">Vehicle</string>
    <string name="vehicle_model">Vehicle Model</string>
    <string name="plate_number">Plate Number</string>
    <string name="vehicle_color">Vehicle Color</string>
    <string name="number">number</string>
    <string name="bugs"># bugs</string>
    <string name="clients"># clients</string>
    <string name="projects"># projects</string>
    <string name="car">Car</string>
    <string name="motorbike">Motorbike</string>
    <string name="sidecar">Side Car</string>


    <string name="first_name">first name</string>
    <string name="last_name">last name</string>
    <string name="birth_year">birth year</string>
    <string name="car_type">Car Type</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="model">model</string>

    <string name="register">Register</string>
    <string name="name">Name: </string>
    <string name="id">Id:</string>

    <string-array name="employee_types">
        <item>Choose a type</item>
        <item>Manager</item>
        <item>Tester</item>
        <item>Programmer</item>
    </string-array>

    <string-array name="colors">
        <item>Choose a color</item>
        <item>Red</item>
        <item>Blue</item>
        <item>Yellow</item>
        <item>Green</item>
        <item>Orange</item>
        <item>Purple</item>
        <item>Pink</item>
        <item>Brown</item>
        <item>White</item>
        <item>Black</item>
        <item>Beige</item>
    </string-array>
</resources>
