<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="20dp"
    android:layout_marginVertical="10dp"
    tools:context=".RegistrationActivity">

    <TextView
        android:id="@+id/tv_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/registration_form"
        android:textSize="22sp"
        android:textStyle="bold|italic" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/btn_register"
        android:layout_below="@id/tv_header"
        android:scrollbars="none">


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="5dp"
            android:paddingVertical="20dp">

            <TableRow android:layout_marginVertical="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/emp_first_name"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_firstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#576F6E6E"
                    android:hint="@string/first_name"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="5dp"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow android:layout_marginVertical="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/emp_last_name"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_lastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#576F6E6E"
                    android:hint="@string/last_name"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="5dp"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow android:layout_marginVertical="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/emp_birth_year"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_birthyear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#576F6E6E"
                    android:hint="@string/birth_year"
                    android:inputType="number"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="5dp"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow android:layout_marginVertical="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="@string/monthly_salary"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_salary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#576F6E6E"
                    android:hint="@string/monthly_salary"
                    android:inputType="numberDecimal"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="5dp"
                    android:textAllCaps="false"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow android:layout_marginVertical="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="@string/occupation_rate"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_rate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#576F6E6E"
                    android:hint="@string/occupation_rate"
                    android:inputType="numberDecimal"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="5dp"
                    android:textAllCaps="false"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow android:layout_marginVertical="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="@string/emp_id"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#576F6E6E"
                    android:hint="@string/emp_id"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="5dp"
                    android:textAllCaps="false"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow android:layout_marginVertical="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="@string/emp_type"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/spinner_emp_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:entries="@array/employee_types"


                    />
            </TableRow>

            <TableRow
                android:id="@+id/tr_work"
                android:layout_marginVertical="5dp"
                android:visibility="gone">

                <TextView
                    android:id="@+id/tv_emp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="task"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#576F6E6E"
                    android:hint="@string/number"
                    android:inputType="number"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="5dp"
                    android:textSize="16sp" />
            </TableRow>


            <TableRow android:layout_marginVertical="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="@string/vehicle"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <RadioGroup

                    android:id="@+id/rg_vehicle_type"
                    android:layout_weight="1"
                    android:orientation="horizontal">


                    <RadioButton
                        android:id="@+id/rb_car"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:onClick="vehicleSelected"
                        android:text="@string/car"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/rb_motorbike"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:onClick="vehicleSelected"
                        android:text="@string/motorbike"
                        android:textSize="16sp" />
                </RadioGroup>
            </TableRow>

            <TableRow
                android:id="@+id/tr_car_type"
                android:layout_marginVertical="5dp"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="@string/car_type"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_car_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#576F6E6E"
                    android:hint="@string/car_type"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="5dp"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow
                android:id="@+id/tr_sidecar"
                android:layout_marginVertical="5dp"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="@string/sidecar"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/rg_sidecar"
                    android:layout_weight="1"
                    android:orientation="horizontal">


                    <RadioButton
                        android:id="@+id/rb_sidecar_yes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/yes"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/rb_sidecar_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/no"
                        android:textSize="16sp" />
                </RadioGroup>
            </TableRow>

            <TableRow android:layout_marginVertical="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="@string/vehicle_model"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_vehicle_model"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#576F6E6E"
                    android:hint="@string/model"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="5dp"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow android:layout_marginVertical="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="@string/plate_number"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_plate_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#576F6E6E"
                    android:hint="@string/plate_number"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="5dp"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow android:layout_marginVertical="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="@string/vehicle_color"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/spinner_color"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:entries="@array/colors" />
            </TableRow>

        </TableLayout>
    </ScrollView>


    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:background="@color/colorPrimary"
        android:onClick="onRegistration"
        android:padding="15dp"
        android:text="@string/register"
        android:textColor="@color/colorWhite" />

</RelativeLayout>